--- a/Front-Taller/index.html
+++ b/Front-Taller/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taller Automotriz
-    
-    </title>
+    <title>Taller Automotriz</title>
+
+    <!-- Incluir Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Incluir Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    ></script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
