--- a/Front-Taller/index.html
+++ b/Front-Taller/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Imagenes/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taller Automotriz</title>
+    <title>Fluxion</title>
 
     <!-- Incluir Bootstrap CSS -->
     <link
